project 2 image no longer overflows when screen is wide but short.

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main {
     background-color: #24305E;
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1000px){
     main {
         position: absolute;
         top:0;
@@ -129,6 +129,7 @@ main {
     grid-template-columns: 1fr 2fr;
     grid-template-areas: 'project2-paragraph project2-image';
     grid-gap: 10px;
+    max-height: calc(100% - 53px);
 }
 
 #project2-paragraph {
@@ -137,12 +138,14 @@ main {
 
 #project2-image-container {
     grid-area: project2-image;
-    max-width: 500px;
+    max-height: 100%;
+    overflow: hidden;
     margin-left: auto;
 }
 
 #project2-img {
     width: 100%;
+    max-height: 100%;
     border-radius: 30px;
 }
 
